--- a/example/indexVAR35.html
+++ b/example/indexVAR35.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR34.js"></script>
+    <script src="js/exampleVAR35.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -183,7 +183,7 @@
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          /*
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
@@ -195,8 +195,15 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			
-
+};			*/
+			
+////////////			
+jQuery(document).ready(function(){
+   $.getScript('js/blueprint3d.js'); 
+   $.getScript(filename);
+});			
+////////
+			
 }
 
 loadjsvar("204");         
