Update and rename indexVAR35.html to indexVAR36.html

--- a/example/indexVAR36.html
+++ b/example/indexVAR36.html
@@ -201,6 +201,7 @@ myScript.onload = function(){
 jQuery(document).ready(function(){
    $.getScript('js/blueprint3d.js'); 
    $.getScript(filename);
+   $.getScript('js/exampleVAR36.js');
 });			
 ////////
 			
