--- a/example/indexVAR39.html
+++ b/example/indexVAR39.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR38.js"></script>
+    <script src="js/exampleVAR39.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -200,8 +200,11 @@ myScript.onload = function(){
 ////////////			
 jQuery(document).ready(function(){
    $.getScript('js/blueprint3d.js'); 
+   $.getScript('js/bootstrap.js');
+   $.getScript('js/exampleVAR39.js');
+   $.getScript('js/html2canvas.js');
    $.getScript(filename);
-   $.getScript('js/exampleVAR38.js');
+   
 });			
 ////////
 			
