--- a/example/indexVAR39.html
+++ b/example/indexVAR39.html
@@ -183,7 +183,7 @@
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          /*
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
@@ -195,9 +195,10 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			*/
+};			
 			
-////////////			
+////////////	
+			/*		
 jQuery(document).ready(function(){
    $.getScript('js/blueprint3d.js'); 
    $.getScript('js/bootstrap.js');
@@ -205,8 +206,8 @@ jQuery(document).ready(function(){
    $.getScript('js/html2canvas.js');
    $.getScript(filename);
    
-});			
-////////
+});	*/		
+////////   
 			
 }
 
