--- a/example/indexVAR40.html
+++ b/example/indexVAR40.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR39.js"></script>
+    <script src="js/exampleVAR40.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -183,7 +183,7 @@
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";          
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";         /* 
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
@@ -195,18 +195,33 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			
+};			*/
 			
 ////////////	
-			/*		
+					
 jQuery(document).ready(function(){
-   $.getScript('js/blueprint3d.js'); 
-   $.getScript('js/bootstrap.js');
-   $.getScript('js/exampleVAR39.js');
-   $.getScript('js/html2canvas.js');
-   $.getScript(filename);
+
+$.getScript('js/blueprint3d.js');
+    $.getScript('js/jquery.js');
+    $.getScript('js/bootstrap.js');
+    $.getScript('js/items.js');  
+    $.getScript('js/items_0.js');  
+    $.getScript('js/items_1.js');
+    $.getScript('js/items_2.js');
+    $.getScript('js/items_3.js');
+    $.getScript('js/items_4.js');
+    $.getScript('js/items_5.js');
+	$.getScript(filename);
+$.getScript('js/exampleVAR40.js');
+$.getScript('https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js');
+$.getScript('https://code.jquery.com/jquery-1.12.4.js');
+$.getScript('https://code.jquery.com/ui/1.12.1/jquery-ui.js');
+$.getScript('js/html2canvas.js');	
+	
+	
+  // $.getScript(filename);
    
-});	*/		
+});			
 ////////   
 			
 }
