--- a/example/indexVAR41.html
+++ b/example/indexVAR41.html
@@ -202,20 +202,9 @@ myScript.onload = function(){
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
-/*    $.getScript('js/jquery.js');   */
     $.getScript('js/bootstrap.js');
-/*    $.getScript('js/items.js');  
-    $.getScript('js/items_0.js');  
-    $.getScript('js/items_1.js');
-    $.getScript('js/items_2.js');
-    $.getScript('js/items_3.js');
-    $.getScript('js/items_4.js');
-    $.getScript('js/items_5.js');   */
 	$.getScript(filename);
-$.getScript('js/exampleVAR41.js');    /*
-$.getScript('https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js');
-$.getScript('https://code.jquery.com/jquery-1.12.4.js');
-$.getScript('https://code.jquery.com/ui/1.12.1/jquery-ui.js');   */
+$.getScript('js/exampleVAR41.js');    
 $.getScript('js/html2canvas.js');	
 	
 	
