--- a/example/indexVAR42.html
+++ b/example/indexVAR42.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR41.js"></script>
+    <script src="js/exampleVAR42.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -183,22 +183,20 @@
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";         /* 
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";         
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
-                      
-//alert(filename);    
 
 document.head.appendChild(myScript); 	
 			
 			
 myScript.onload = function(){
     alert(filename);
-};			*/
+};			
 			
 ////////////	
-					
+	/*				
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
@@ -208,14 +206,14 @@ $.getScript('js/exampleVAR41.js');
 $.getScript('js/html2canvas.js');	
 	
 	
-  // $.getScript(filename);
+
    
-});			
+});			*/
 ////////   
 			
 }
 
-loadjsvar("204");         
+loadjsvar("205");         
    
 		</script>	    
 
