Update and rename indexVAR42.html to indexVAR43.html

--- a/example/indexVAR43.html
+++ b/example/indexVAR43.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR42.js"></script>
+    <script src="js/exampleVAR43.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -179,7 +179,7 @@
       
 		function loadjsvar (varfilename){
 	
-	
+	/*
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
 
@@ -193,22 +193,22 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			
+};			*/
 			
 ////////////	
-	/*				
+					
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
-    $.getScript('js/bootstrap.js');
+//    $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-$.getScript('js/exampleVAR41.js');    
-$.getScript('js/html2canvas.js');	
+//$.getScript('js/exampleVAR43.js');    
+//$.getScript('js/html2canvas.js');	
 	
 	
 
    
-});			*/
+});			
 ////////   
 			
 }
