--- a/example/indexVAR44.html
+++ b/example/indexVAR44.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR43.js"></script>
+    <script src="js/exampleVAR44.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -200,9 +200,9 @@ myScript.onload = function(){
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
-//    $.getScript('js/bootstrap.js');
+    $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-//$.getScript('js/exampleVAR43.js');    
+//$.getScript('js/exampleVAR44.js');    
 //$.getScript('js/html2canvas.js');	
 	
 	
