--- a/example/indexVAR48.html
+++ b/example/indexVAR48.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR47.js"></script>
+    <script src="js/exampleVAR48.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -182,9 +182,10 @@
 	
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
+var filename = "js/items_varcod-"+varfilename+".js";
 
-
- var filename = "js/varitems-it/items_varcod-"+varfilename+".js";         /*
+// var filename = "js/varitems-it/items_varcod-"+varfilename+".js";    
+			/*
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
@@ -203,7 +204,7 @@ jQuery(document).ready(function(){
 $.getScript('js/blueprint3d.js');
    $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-$.getScript('js/exampleVAR47.js');    
+$.getScript('js/exampleVAR48.js');    
 $.getScript('js/html2canvas.js');	
 	
 	
