--- a/example/indexVAR50.html
+++ b/example/indexVAR50.html
@@ -26,7 +26,7 @@
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR49.js"></script>
+    <script src="js/exampleVAR50.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -202,10 +202,10 @@ myScript.onload = function(){
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
-   $.getScript('js/bootstrap.js');
+ //  $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-//$.getScript('js/exampleVAR49.js');    
-//$.getScript('js/html2canvas.js');	
+//$.getScript('js/exampleVAR50.js');    
+$.getScript('js/html2canvas.js');	
 	
 	
 
