Update and rename indexVAR51.html to indexVAR52.html

--- a/example/indexVAR52.html
+++ b/example/indexVAR52.html
@@ -23,10 +23,11 @@
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
+    <script src="js/varitems-it/items_varcod-200.js"></script>
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR51.js"></script>
+    <script src="js/exampleVAR52.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -182,10 +183,10 @@
 	
 			
 // NB: varfilename e' il codice di ciascuna variante di colore-materiale di cui voglio caricare in index il rispettivo items js
-var filename = "js/items_varcod-"+varfilename+".js";
 
-// var filename = "js/varitems-it/items_varcod-"+varfilename+".js";    
-			/*
+
+ var filename = "js/varitems-it/items_varcod-"+varfilename+".js";    
+			
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
@@ -195,10 +196,10 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			*/
+};			
 			
 ////////////	
-					
+/*					
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
@@ -210,7 +211,7 @@ $.getScript('js/html2canvas.js');
 	
 
    
-});			
+});		*/	
 ////////   
 			
 }
