Update and rename indexVAR57.html to indexVAR58.html

--- a/example/indexVAR58.html
+++ b/example/indexVAR58.html
@@ -23,11 +23,11 @@
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
-    <script src="js/varitems-it/items_varcod-99.js"></script> 
+<!--    <script src="js/varitems-it/items_varcod-99.js"></script> -->
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
-    <script src="js/exampleVAR57.js"></script>
+    <script src="js/exampleVAR58.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -187,7 +187,7 @@
 
  var filename = "js/varitems-it/items_varcod-"+varfilename+".js";    
 			
-		
+/*		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
 
@@ -196,22 +196,22 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};			
+};		*/	
 			
 ////////////	
-/*					
+					
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
    $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-//$.getScript('js/exampleVAR51.js');    
+$.getScript('js/exampleVAR58.js');    
 $.getScript('js/html2canvas.js');	
 	
 	
 
    
-});		*/	
+});			
 ////////   
 			
 }
