Update and rename indexVAR58.html to indexVAR59.html

--- a/example/indexVAR59.html
+++ b/example/indexVAR59.html
@@ -203,9 +203,9 @@ myScript.onload = function(){
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
-   $.getScript('js/bootstrap.js');
+ //  $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-$.getScript('js/exampleVAR58.js');    
+// $.getScript('js/exampleVAR58.js');    
 $.getScript('js/html2canvas.js');	
 	
 	
