Update and rename indexVAR59.html to indexVAR60.html

--- a/example/indexVAR60.html
+++ b/example/indexVAR60.html
@@ -205,8 +205,8 @@ jQuery(document).ready(function(){
 $.getScript('js/blueprint3d.js');
  //  $.getScript('js/bootstrap.js');
 	$.getScript(filename);
-// $.getScript('js/exampleVAR58.js');    
-$.getScript('js/html2canvas.js');	
+ $.getScript('js/exampleVAR58.js');    
+// $.getScript('js/html2canvas.js');	
 	
 	
 
