Update and rename indexVAR61.html to indexVAR62.html

--- a/example/indexVAR62.html
+++ b/example/indexVAR62.html
@@ -23,7 +23,7 @@
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
-<!--    <script src="js/varitems-it/items_varcod-99.js"></script> -->
+    <script src="js/varitems-it/items_varcod-211.js"></script> 
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
@@ -188,8 +188,7 @@
 // var filename = "js/varitems-it/items_varcod-"+varfilename+".js";   
 			
 var filename = "js/items_varcod-"+varfilename+".js";			
-			
-/*		
+		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
 
@@ -198,10 +197,10 @@ document.head.appendChild(myScript);
 			
 myScript.onload = function(){
     alert(filename);
-};		*/	
+};			
 			
 ////////////	
-					
+/*					
 jQuery(document).ready(function(){
 
 $.getScript('js/blueprint3d.js');
@@ -213,12 +212,12 @@ $.getScript('js/blueprint3d.js');
 	
 
    
-});			
+});		*/	
 ////////   
 			
 }
 
-loadjsvar("211");         
+loadjsvar("210");         
    
 		</script>	    
 
