--- a/example/indexVAR62.html
+++ b/example/indexVAR62.html
@@ -23,7 +23,7 @@
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
-    <script src="js/varitems-it/items_varcod-211.js"></script> 
+     <script src="js/varitems-it/items_varcod-98.js"></script> 
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
@@ -187,7 +187,7 @@
 
 // var filename = "js/varitems-it/items_varcod-"+varfilename+".js";   
 			
-var filename = "js/items_varcod-"+varfilename+".js";			
+var filename = "js/varitems-it/items_varcod-"+varfilename+".js";			
 		
 var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
