Update and rename indexVAR62.html to indexVAR63.html

--- a/example/indexVAR63.html
+++ b/example/indexVAR63.html
@@ -23,7 +23,7 @@
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
-     <script src="js/varitems-it/items_varcod-98.js"></script> 
+ <!--     <script src="js/varitems-it/items_varcod-98.js"></script>  -->
 	  
 	<!--   <script src="js/varitems-it/items_varcod-203.js" id="oveu"></script> -->
 
@@ -217,7 +217,7 @@ $.getScript('js/blueprint3d.js');
 			
 }
 
-loadjsvar("210");         
+loadjsvar("250");         
    
 		</script>	    
 
