Update and rename indexVAR71.html to indexVAR72.html

--- a/example/indexVAR72.html
+++ b/example/indexVAR72.html
@@ -56,8 +56,8 @@ var myScript = document.createElement('script');
 myScript.setAttribute('src', filename);
 			
 			
-var list = document.getElementsByTagName("body"); // aggiunta bottom di body
-list.insertBefore(myScript, list.childNodes[0]);  //ancora aggiunta bottom di body			
+var list = document.getElementsByTagName("head"); // aggiunta bottom di head
+list.insertBefore(myScript, list.childNodes[19]);  //ancora aggiunta bottom di head			
 			
 			
 // document.head.appendChild(myScript); 	
