--- a/example/mobileitIresol1.html
+++ b/example/mobileitIresol1.html
@@ -126,7 +126,7 @@ $.sweetModal({
           <hr />
 
          <!-- Context Menu -->
-          <div id="context-menu" class="col-xs-4">
+          <div id="context-menu">
             <div style="margin: 0 20px">
               <span id="context-menu-name" class="lead"></span>
               <br /> 
@@ -265,7 +265,7 @@ $.sweetModal({
         </div>
 
         <!-- Right Column -->
-        <div class="col-xs-8 main">    <div id="imagesave">
+        <div class="col-xs-7 main">    <div id="imagesave">
 
         <!-- 3D Viewer prima era qui-->
            
