--- a/example/mobileitIresol2.html
+++ b/example/mobileitIresol2.html
@@ -127,7 +127,7 @@ $.sweetModal({
 
          <!-- Context Menu -->
           <div id="context-menu">
-            <div style="margin: 0 20px">
+            <div style="margin: 0 40px">  <!-- era 20 px    -->
               <span id="context-menu-name" class="lead"></span>
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
@@ -265,7 +265,7 @@ $.sweetModal({
         </div>
 
         <!-- Right Column -->
-        <div class="col-xs-7 main">    <div id="imagesave">
+        <div class="col-xs-9 main">    <div id="imagesave">
 
         <!-- 3D Viewer prima era qui-->
            
