--- a/example/mobileitIresol2.html
+++ b/example/mobileitIresol2.html
@@ -83,7 +83,7 @@ $.sweetModal({
 <div class="container-fluid">
       <div class="row main-row">
         <!-- Left Column -->
-        <div class="col-xs-3 sidebar">
+        <div class="col-xs-4 sidebar">   <!-- era col-xs-3    -->
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
             <li id="floorplan_tab" style="display:none"><a href="#">
@@ -127,7 +127,7 @@ $.sweetModal({
 
          <!-- Context Menu -->
           <div id="context-menu">
-            <div style="margin: 0 40px">  <!-- era 20 px    -->
+            <div style="margin: 0 20px">  
               <span id="context-menu-name" class="lead"></span>
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
