Update and rename mobileitIresol4.html to mobileitIresol5.html

--- a/example/mobileitIresol5.html
+++ b/example/mobileitIresol5.html
@@ -192,7 +192,7 @@ $.sweetModal({
               
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
                 <span class="glyphicon glyphicon-align-center" id="basketorcustom"></span> 
-                Altri Dettagli o Compra
+                Altri Dettagli<br> o Compra
               </a>
 	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
             <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
