Update and rename mobileitIresol5.html to mobileitIresol6.html

--- a/example/mobileitIresol6.html
+++ b/example/mobileitIresol6.html
@@ -127,7 +127,7 @@ $.sweetModal({
 
          <!-- Context Menu -->
           <div id="context-menu">
-            <div style="margin: 0 20px">  
+            <div style="margin: 0 20px">  <!--  era 20px a dx di margin   -->
               <span id="context-menu-name" class="lead"></span>
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
@@ -196,7 +196,7 @@ $.sweetModal({
               </a>
 	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
             <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
-                Richiedi Info e Costi
+                Richiedi Info<br> e Costi
               </a>
             <a class="btn btn-block btn-success" href="" id="namecodeitem" target="_blank">
 		link
