Update and rename mobileitIsong.html to mobileitIsong1.html

--- a/example/mobileitIsong1.html
+++ b/example/mobileitIsong1.html
@@ -127,19 +127,19 @@ $.sweetModal({
 
          <!-- Context Menu -->
           <div id="context-menu">
-            <div style="margin: 0 10px">  <!--  era 20px a dx di margin   -->
+            <div style="margin: 0 8px">  <!--  era 20px a dx di margin   -->
               <span id="context-menu-name" class="lead"></span>
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
-                Cancella Arredo
+                Cancella<br> Arredo
               </button>
             <br />
 		       
 
              <a class="btn btn-block btn-info" href="" id="modelGallerylink" target="_blank">
                 <span class="glyphicon glyphicon-align-center"></span> 
-                Zoom arredo
+                Zoom<br> arredo
 	      </a>
 		    <br />
 		
