Update and rename mobileitItbltA3.html to mobileitItbltA4.html

--- a/example/mobileitItbltA4.html
+++ b/example/mobileitItbltA4.html
@@ -151,10 +151,10 @@ $.sweetModal({
 
                 <div class="form form-horizontal" class="lead">
                   <div class="form-group">
-                    <label class="col-sm-5 control-label">
+                    <label class="col-sm-3 control-label">           <!--     era sm-5        -->
                        L
                     </label>
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">         <!-- era sm-6  -->
                    <!--   <input type="number" class="form-control" id="item-width"> se voglio campo L modificabile -->
                     <input type="number" class="form-control" id="item-width" readonly> 
                     </div>
