Update and rename indexWH.html to indexWH1.html

--- a/example/indexWH1.html
+++ b/example/indexWH1.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
       <div class="row main-row">
         <!-- Left Column -->
-        <div class="col-xs-4 sidebar">
+        <div class="col-xs-3 sidebar">   <!-- era xs-3 -->
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
             <li id="floorplan_tab"><a href="#">
@@ -84,7 +84,7 @@
 
          <!-- Context Menu -->
           <div id="context-menu">
-            <div style="margin: 0 20px">
+            <div style="margin: 0 8px">
               <span id="context-menu-name" class="lead"></span>
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
@@ -918,7 +918,7 @@
         </div>
 
         <!-- Right Column -->
-        <div class="col-xs-8 main">    <div id="imagesave">
+        <div class="col-xs-9 main">    <div id="imagesave">            <!-- era xs-9  -->
 
           <!-- 3D Viewer -->
           <div id="viewer">
