--- a/example/mobileitIS0.html
+++ b/example/mobileitIS0.html
@@ -1,13 +1,14 @@
 <!--  NO RUN -->
-
+<html><head>
 <!--  inserimento scripts per sweetmodal pop up --> 
 <link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
 <script src="js/jquery.sweet-modal6.js"></script>
 <!--  fine scripts per sweetmodal pop up -->
 
+	</head>
 
-
-
+<body style="background-color:#ffffe6">
+	
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
 $(window).load(function() {
@@ -31,3 +32,6 @@ $.sweetModal({
 });				
 </script>
 <!--  fine sweetmodal pop up rotazione schermo device-->
+
+	</body>
+</html>
