Update and rename zzzS1-b.html to zzzS1-c.html

--- a/example/zzzS1-c.html
+++ b/example/zzzS1-c.html
@@ -604,7 +604,7 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
    } else {
 		
 		
-	document.getElementById("modelAr3Dlink").href = ""+hreftemp+"&Dst=1 m&Choice=NO%20SELECTION";	
+	document.getElementById("modelAr3Dlink").href = ""+hreftemp+"&Dst=1%20m&Choice=NO%20SELECTION"+"&IN=S1";	
 		
 	}
 
