--- a/example/zzzS1-f.html
+++ b/example/zzzS1-f.html
@@ -51,6 +51,14 @@
 <body style="background-color:#ffffe6">
 	
 
+<script>
+
+document.getElementById("modelAr3Dlink").href = document.getElementById("modelAr3Dlink").href+"&IN=S1";	
+	
+</script>
+	
+	
+	
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
 $(window).load(function() {
