Update and rename zzzS1-g.html to zzzS1-h.html

--- a/example/zzzS1-h.html
+++ b/example/zzzS1-h.html
@@ -51,17 +51,9 @@
 <body style="background-color:#ffffe6">
 	
 
-<script>
-
-document.getElementById("modelAr3Dlink").href = document.getElementById("modelAr3Dlink").href+"&IN=S1";	
-	
-</script>
-	
-	
-	
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
-$(window).load(function() {
+$(window).load(function() { document.getElementById("modelAr3Dlink").href = document.getElementById("modelAr3Dlink").href+"&IN=S1";
        	if(window.innerHeight > window.innerWidth){ 
 		
 $.sweetModal({
