--- a/example/zzzS1-i.html
+++ b/example/zzzS1-i.html
@@ -53,7 +53,7 @@
 
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
-$(window).load(function() { document.getElementById("modelAr3Dlink").href = document.getElementById("modelAr3Dlink").href+"&IN=S1";
+$(window).load(function() { 
        	if(window.innerHeight > window.innerWidth){ 
 		
 $.sweetModal({
