--- a/example/mobileitO.html
+++ b/example/mobileitO.html
@@ -105,7 +105,7 @@ $.sweetModal({
  
 
            <div id="main-controls">
-              <a href="mobileitI.html" class="btn btn-default btn-sm" id="new">
+              <a href="javascript:history.back()" class="btn btn-default btn-sm" id="new">       <!-- era href="mobileitI.html  -->
               <span class="glyphicon glyphicon-refresh" title="Nuovo Oggetto"></span>    <!--    Nuovo  -->
             </a>
               
