--- a/surplus1.html
+++ b/surplus1.html
@@ -12,13 +12,13 @@
   var l_lang;
   if (navigator.userLanguage)  { // Explorer   
     l_lang = navigator.userLanguage;
-    window.location.href = 'www.lamoneta.it/' + l_lang + '.html';   }
+    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   }
   else if (navigator.language)  { // FF
     l_lang = navigator.language;
-    window.location.href = 'www.lamoneta.it/' + l_lang + '.html';  }
+    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';  }
   else  {
     l_lang = "en";
-  window.location.href = 'www.lamoneta.it/' + l_lang + '.html';   }
+  window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   }
   
   }
   
