--- a/surplusA.html
+++ b/surplusA.html
@@ -12,14 +12,29 @@
   var l_lang;
   if (navigator.userLanguage)  { // Explorer   
     l_lang = navigator.userLanguage;
-    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   }
+   
+    /*   if (condition1) {
+         block of code to be executed if condition1 is true
+       } else if (condition2) {
+         block of code to be executed if the condition1 is false and condition2 is true
+      } else {
+       block of code to be executed if the condition1 is false and condition2 is false
+      }
+   */
+   
+    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   
+  }
   else if (navigator.language)  { // FF
     l_lang = navigator.language;
-    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';  }
+    window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';  
+  }
   else  {
     l_lang = "en";
-  window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   }
+  window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   
+  }
   
+   
+   
   }
   
 </script>
