--- a/index.html
+++ b/index.html
@@ -12,7 +12,55 @@ p.thick {
 }
 </style>
 	
-<meta http-equiv="refresh" content="0; url=http://storianum.github.io/workshops/example/index.html">
+
+<script>
+//select language
+  
+  window.onload = function() {
+  
+  var l_lang;
+   
+   
+  if (navigator.userLanguage)  {       // Explorer   
+    l_lang = navigator.userLanguage;
+   
+     if (l_lang.substr(0,2)=="it") {
+         window.location.href = 'http://www.aviometal.com/' + 'it1' + '.html';
+       } else if (l_lang.substr(0,2)=="en") {
+         window.location.href = 'http://www.aviometal.com/' + 'en1' + '.html';
+      } else {
+       window.location.href = 'http://www.aviometal.com/' + 'it2' + '.html';
+      }
+  }
+   
+   
+  else if (navigator.language)  { // FF
+    l_lang = navigator.language;
+   
+    if (l_lang.substr(0,2)=="it") {
+         window.location.href = 'http://www.aviometal.com/' + 'it3' + '.html';
+       } else if (l_lang.substr(0,2)=="en") {
+         window.location.href = 'http://www.aviometal.com/' + 'en2' + '.html';
+      } else {
+       window.location.href = 'http://www.aviometal.com/' + 'it4' + '.html';
+      }
+  }
+ 
+      
+  else  {
+    l_lang = "en3";
+  window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   
+  }
+  
+   
+   
+  }
+  
+</script>	
+	
+	
+	
+	
 </head>
 <body>
 	<p class="thick">Loading - Please Wait!</p>
