--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ p.thick {
     l_lang = navigator.userLanguage;
    
      if (l_lang.substr(0,2)=="it") {
-         window.location.href = 'http://www.aviometal.com/' + 'it1' + '.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://www.aviometal.com/' + 'en1' + '.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
       } else {
-       window.location.href = 'http://www.aviometal.com/' + 'it2' + '.html';
+       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
       }
   }
    
@@ -38,18 +38,18 @@ p.thick {
     l_lang = navigator.language;
    
     if (l_lang.substr(0,2)=="it") {
-         window.location.href = 'http://www.aviometal.com/' + 'it3' + '.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://www.aviometal.com/' + 'en2' + '.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
       } else {
-       window.location.href = 'http://www.aviometal.com/' + 'it4' + '.html';
+       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
       }
   }
  
       
   else  {
     l_lang = "en3";
-  window.location.href = 'http://www.aviometal.com/' + l_lang + '.html';   
+  window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';   
   }
   
    
