Update and rename zbicu1.html to zbicu2.html

--- a/example/zbicu2.html
+++ b/example/zbicu2.html
@@ -280,7 +280,7 @@ $.sweetModal({
             
 
 <a href="#" class="btn btn-default btn-sm" id="change_lang">
-<span class="glyphicon glyphicon-screenshot" title="Cambia Lingua"></span>                 <!--  Change_lang -->
+<span class="glyphicon glyphicon-globe" title="Cambia Lingua"></span>                 <!--  Change_lang -->
 </a>  
 <script>
   $('#change_lang').click(function(){
@@ -292,7 +292,8 @@ $.sweetModal({
 	  
 $.sweetModal({
 	title: 'CHANGE LANGUAGE',
-	content: 'You can place <b>anything</b> <i>you</i> want in here.'
+	content: '<a href="https://www.w3schools.com/html/"><img src="flag/englishflag.png" width="30" height="30"><b> ENGLISH</b> <i>(click here!)</i></a>
+  '
 });	  
 	  
 	  
