--- a/example/zbicu3.html
+++ b/example/zbicu3.html
@@ -292,8 +292,8 @@ $.sweetModal({
 	  
 $.sweetModal({
 	title: 'CHANGE LANGUAGE',
-	content: '<a href="https://www.w3schools.com/html/"><img src="flag/englishflag.png" width="30" height="30"><b> ENGLISH</b> <i>(click here!)</i></a>
-  '
+	content: '<a href="https://www.w3schools.com/html/"><img src="flag/englishflag.png" width="30" height="30"><b> ENGLISH</b> <i>(click here!)</i></a>'
+  
 });	  
 	  
 	  
