--- a/example/zbicu3.html
+++ b/example/zbicu3.html
@@ -291,7 +291,7 @@ $.sweetModal({
 	  
 	  
 $.sweetModal({
-	title: 'CHANGE LANGUAGE',
+	title: 'CAMBIA LINGUA',
 	content: '<a href="https://www.w3schools.com/html/"><img src="flag/englishflag.png" width="30" height="30"><b> ENGLISH</b> <i>(click here!)</i></a>'
   
 });	  
