--- a/example/index.html
+++ b/example/index.html
@@ -31,7 +31,10 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
-
+<!--  inserimento scripts per sweetmodal pop up --> 
+<link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
+<script src="js/jquery.sweet-modal6.js"></script>
+<!--  fine scripts per sweetmodal pop up -->
        
   </head>
 
