Update and rename indexentest.html to indexentest1.html

--- a/example/indexentest1.html
+++ b/example/indexentest1.html
@@ -967,7 +967,7 @@
 	  
 	  
 $.sweetModal({
-	title: 'CAMBIA LINGUA',
+	title: 'CHANGE LANGUAGE',
 	content: '<a href="https://www.w3schools.com/html/"><img src="flag/italianflag.png" width="30" height="30"><b> ITALIANO</b> <i>(click here!)</i></a>'
   
 });	  
