--- a/example/indexentest1.html
+++ b/example/indexentest1.html
@@ -59,7 +59,7 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
             <li id="items_tab"><a href="#">
-              Append Sitting
+              Append Sittings
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
             <li id="items_tab_1"><a href="#">
@@ -67,7 +67,7 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
             <li id="items_tab_2"><a href="#">
-              Append Wardrobe/Drawers
+              Append Wardrobes/Drawers
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
            <li id="items_tab_3"><a href="#">
@@ -79,7 +79,7 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
 	   <li id="items_tab_5"><a href="#">
-              Append Shelving
+              Append Shelvings
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
           </ul>
