Update and rename mobileenIS1test.html to mobileenIS1test1.html

--- a/example/mobileenIS1test1.html
+++ b/example/mobileenIS1test1.html
@@ -132,14 +132,14 @@ $.sweetModal({
               <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
-                Delete<br> Furnit.
+                Delete<br> Furniture
               </button>
             <br />
 		       
 
              <a class="btn btn-block btn-info" href="" id="modelGallerylink" target="_blank">
                 <span class="glyphicon glyphicon-align-center"></span> 
-                Zoom<br> Furnit.
+                Zoom<br> Furniture
 	      </a>
 		    <br />
 		
