--- a/example/mobileenIS1test1.html
+++ b/example/mobileenIS1test1.html
@@ -146,7 +146,7 @@ $.sweetModal({
               
               
             <div class="panel panel-default" id="panelcustomitem">
-              <div class="panel-heading" id="contentdimens">Varia Dimensione</div>
+              <div class="panel-heading" id="contentdimens">Change Size</div>
               <div class="panel-body" style="color: #333333">
 
                 <div class="form form-horizontal" class="lead">
@@ -185,7 +185,7 @@ $.sweetModal({
    <!--      <label><input type="checkbox" id="fixed" /> Lock Position</label>     
              <br />      -->
  <!--  -->
-            <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i>
+            <label><span class="text-muted" style="color:green" id="prez">Price: </span><i><span id="modelPricetot"></span></i>
 	    <span class="text-muted" style="color:green" id="infoiva"> VAT included</span>
 	    </label>  
             <br /><br />
