--- a/example/mobileenIT0test.html
+++ b/example/mobileenIT0test.html
@@ -146,7 +146,7 @@ $.sweetModal({
               
               
             <div class="panel panel-default" id="panelcustomitem">
-              <div class="panel-heading" id="contentdimens">Varia Dimensione</div>
+              <div class="panel-heading" id="contentdimens">Change Size</div>
               <div class="panel-body" style="color: #333333">
 
                 <div class="form form-horizontal" class="lead">
