--- a/example/mobileenIS3.html
+++ b/example/mobileenIS3.html
@@ -16,17 +16,17 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
 
-    <script src="js/items.js"></script>
+    <script src="js/itemsen.js"></script>
     
     <script src="js/items_0mob.js"></script>
-    <script src="js/items_0.js"></script>  
-    <script src="js/items_1.js"></script>
-    <script src="js/items_2.js"></script>
-    <script src="js/items_3.js"></script>
-    <script src="js/items_4.js"></script>
-    <script src="js/items_5.js"></script>
+    <script src="js/items_0en.js"></script>  
+    <script src="js/items_1en.js"></script>
+    <script src="js/items_2en.js"></script>
+    <script src="js/items_3en.js"></script>
+    <script src="js/items_4en.js"></script>
+    <script src="js/items_5en.js"></script>
     
-    <script src="js/znelot18.js"></script>
+    <script src="js/znelot18en.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
