--- a/example/ZZZindexz0123-3.html
+++ b/example/ZZZindexz0123-3.html
@@ -1025,7 +1025,7 @@ $.sweetModal({
             </div>
 
             <div id="loading-modal">
-              <h1>Caricamento Stanza di Esempio...</h1>  
+              <h1>Caricamento Arredo nella Stanza di Esempio...</h1>  
             </div>
           </div>
 
