--- a/index.html
+++ b/index.html
@@ -14,22 +14,51 @@ p.thick {
 	
 
 <script>
+
+
 //select language
   
   window.onload = function() {
   
   var l_lang;
+  
+  
+  // select code parameter
+
+var $_GET = {};
+if(document.location.toString().indexOf('?') !== -1) {
+    var query = document.location
+                   .toString()
+                   // get the query string
+                   .replace(/^.*?\?/, '')
+                   // and remove any existing hash string 
+                   .replace(/#.*$/, '')
+                   .split('&');
+
+    for(var i=0, l=query.length; i<l; i++) {
+       var aux = decodeURIComponent(query[i]).split('=');
+       $_GET[aux[0]] = aux[1];
+    }
+}
+//get the 'code' query parameter
+
+
+var code = $_GET['code'];
+if (code!="" && code!=null) { code = "?code="+code+""; }
+else  { code=""; }
+  
+  
    
    
   if (navigator.userLanguage)  {       // Explorer   
     l_lang = navigator.userLanguage;
    
      if (l_lang.substr(0,2)=="it") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html'+code+'';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       } else {
-       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
+       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       }
   }
    
@@ -38,23 +67,26 @@ p.thick {
     l_lang = navigator.language;
    
     if (l_lang.substr(0,2)=="it") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html';
+        window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html'+code+'';
+       //    window.location.href = 'http://www.libero.it'+code+'';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
+         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       } else {
-       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';
+       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       }
   }
  
       
   else  {
     l_lang = "en3";
-  window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html';   
+  window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';   
   }
   
    
    
-  }
+  } 
+  
+ 
   
 </script>	
 	
