--- a/dispatcherEN.html
+++ b/dispatcherEN.html
@@ -39,15 +39,37 @@ document.addEventListener("DOMContentLoaded", function(event) {
     // You're on a desktop.
    // alert('DESKTOP!!!'); 
    // document.getElementById("demo").innerHTML = "DESKTOP!";
+   
+   
+      var $_GET = {};
+if(document.location.toString().indexOf('?') !== -1) {
+    var query = document.location
+                   .toString()
+                   // get the query string
+                   .replace(/^.*?\?/, '')
+                   // and remove any existing hash string 
+                   .replace(/#.*$/, '')
+                   .split('&');
+    for(var i=0, l=query.length; i<l; i++) {
+       var aux = decodeURIComponent(query[i]).split('=');
+       $_GET[aux[0]] = aux[1];
+    }
+}
+//get the 'code' query parameter 
+var code = $_GET['code'];
+if (code!="" && code!=null) { code="z"+code; }
+else  { code=""; }
+   
+   
 
             if ( h < 1300 && w > 1160 ) {
-            window.location.replace("https://storianum.github.io/workshops/example/indexen.html");
+            window.location.replace("https://storianum.github.io/workshops/example/index"+code+"en.html");
              }
             else if (w < 1160) {
-            window.location.replace("https://storianum.github.io/workshops/example/indexpcen.html");
+            window.location.replace("https://storianum.github.io/workshops/example/indexpc"+code+"en.html");
              }  
             else {
-            window.location.replace("https://storianum.github.io/workshops/example/indexen.html");
+            window.location.replace("https://storianum.github.io/workshops/example/index"+code+"en.html");
              } 
             
             
