--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ else  { code=""; }
     l_lang = navigator.userLanguage;
    
      if (l_lang.substr(0,2)=="it") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html'+code+'';
+         window.location.href = 'https://storianum.github.io/workshops/dispatcherIT.html'+code+'';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
+         window.location.href = 'https://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       } else {
-       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
+       window.location.href = 'https://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       }
   }
    
@@ -67,19 +67,19 @@ else  { code=""; }
     l_lang = navigator.language;
    
     if (l_lang.substr(0,2)=="it") {
-        window.location.href = 'http://storianum.github.io/workshops/dispatcherIT.html'+code+'';
+        window.location.href = 'https://storianum.github.io/workshops/dispatcherIT.html'+code+'';
        //    window.location.href = 'http://www.libero.it'+code+'';
        } else if (l_lang.substr(0,2)=="en") {
-         window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
+         window.location.href = 'https://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       } else {
-       window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';
+       window.location.href = 'https://storianum.github.io/workshops/dispatcherEN.html'+code+'';
       }
   }
  
       
   else  {
     l_lang = "en3";
-  window.location.href = 'http://storianum.github.io/workshops/dispatcherEN.html'+code+'';   
+  window.location.href = 'https://storianum.github.io/workshops/dispatcherEN.html'+code+'';   
   }
   
    
