--- a/it.html
+++ b/it.html
@@ -12,7 +12,7 @@ p.thick {
 }
 </style>
 	
-<meta http-equiv="refresh" content="0; url=http://storianum.github.io/workshops/example/index.html">
+<meta http-equiv="refresh" content="0; url=https://storianum.github.io/workshops/example/index.html">
 </head>
 <body>
 	<p class="thick">Loading - Please Wait!</p>
