--- a/example/mobileitIS3.html
+++ b/example/mobileitIS3.html
@@ -20,11 +20,11 @@
     
     <script src="js/items_0mob.js"></script>
     <script src="js/items_0.js"></script>  
-    <script src="js/items_1.js"></script>
-    <script src="js/items_2.js"></script>
-    <script src="js/items_3.js"></script>
-    <script src="js/items_4.js"></script>
-    <script src="js/items_5.js"></script>
+    <script src="js/items_1nocustom.js"></script>
+    <script src="js/items_2nocustom.js"></script>
+    <script src="js/items_3nocustom.js"></script>
+    <script src="js/items_4nocustom.js"></script>
+    <script src="js/items_5nocustom.js"></script>
     
     <script src="js/znelot18.js"></script>
 
