--- a/example/mobileenIS0.html
+++ b/example/mobileenIS0.html
@@ -21,11 +21,11 @@
     
     <script src="js/items_0mob.js"></script>
     <script src="js/items_0en.js"></script>  
-    <script src="js/items_1en.js"></script>
-    <script src="js/items_2en.js"></script>
-    <script src="js/items_3en.js"></script>
-    <script src="js/items_4en.js"></script>
-    <script src="js/items_5en.js"></script>
+    <script src="js/items_1en-nocus.js"></script>
+    <script src="js/items_2en-nocus.js"></script>
+    <script src="js/items_3en-nocus.js"></script>
+    <script src="js/items_4en-nocus.js"></script>
+    <script src="js/items_5en-nocus.js"></script>
     
     <script src="js/znelot18en.js"></script>
 
